second commit for modifying the original page's name

--- a/comingsoon.html
+++ b/comingsoon.html
@@ -9,7 +9,7 @@
 <body>
     <div>
     <img src="img/lablogo.png" alt="">
-    <a href="page1.html">Back to home </a>
+    <a href="index.html">Back to home </a>
 </div>
     <p>waiting room </p>
         <h1>Coming soon...</h1>
