--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     <header>
         <nav>
             <div class="left">
-                <img src="./img/lablogo.png" alt="">
+                <a href="#hm" class="homeimg">
+                <img  src="./img/lablogo.png" alt="">
+                </a>
                 <div class="bar">
-                    <button onclick="location.href='#hm'">Home</button>
                     <button onclick="location.href='#abt'">About us</button>
                     <button onclick="location.href='#serv'">Services</button>
                     <button onclick="location.href='comingsoon.html'" >Subscription</button>
@@ -83,25 +84,31 @@ Born from a passion for productivity and self-expression, Inklab merges planning
     <h1>Services</h1>
     <section class="services">
         <div>
+            <a class="uno" href="comingsoon.html">
             <div class="un">
             <img src="img/creation.jpg" alt="">
                 <h2>Custom Digital Workspace</h2>
                 <p>Design your own pages just the way you like them. Add text, images, checkboxes, and more — all with drag-and-drop simplicity.</p>
             </div>
+        </a>
         </div>
         <div>
+            <a class="uno" href="comingsoon.html">
             <div class="un">
             <img src="img/planner.jpg" alt="">
                 <h2>Smart Planner</h2>
                 <p>Organize your days, weeks, and months with a visual calendar. Set priorities, track progress, and stay ahead with intuitive planning tools.</p>
             </div>
+        </a>
         </div>
         <div>
+            <a class="uno" href="comingsoon.html">
             <div class="un">
             <img src="img/todo.jpg" alt="">
                 <h2>To-Do Lists</h2>
                 <p>Create, manage, and check off your tasks with satisfying ease. Stay focused, one checkbox at a time.</p>
             </div>
+        </a>
         </div>
     </section>
 </div>
