fourth commit : i added cursor:pointer to my clickables

--- a/bubbles.html
+++ b/bubbles.html
@@ -29,7 +29,7 @@
                 <button type="submit" id="submit-btn">Login</button>
             </form>
 
-            <p id="toggle-form">Don't have an account? <a href="./signin.html">Sign Up</a></p>
+            <p id="toggle-form">Don't have an account? <a class="signinbutton" href="./signin.html">Sign Up</a></p>
         </div>
     </div>
   </div>
