--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ Born from a passion for productivity and self-expression, Inklab merges planning
 
     <footer id="conts">
         <div class="contacts">
-        <p>Made with ❤️ by Inklab Team © 2025</p><br>
+        <p>Made with ❤️ by Maram Ben Amna © 2025</p><br>
         <p>Contact: <a href="mailto:hello@inklab.com">hello@inklab.com</a></p> <br>
         <p>Follow us:
           <a href="https://instagram.com/inklab" target="_blank">Instagram</a> |
