--- a/signin.html
+++ b/signin.html
@@ -43,7 +43,7 @@
             <div class="input-group">
               <input type="tel" id="phone" placeholder="Phone Number" required>
             </div>
-            <button type="submit" id="submit-btn">Sign Up</button>
+            <button class="signupbtn" type="submit" id="submit-btn">Sign Up</button>
           </form>
 
           <p id="toggle-form">Already have an account? <a href="#">Login</a></p>
